more sass and fixing images

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-sm">
-							<h2 class="text-center font-weight-bold">Share</h2>
+							<h2 class="text-center font-weight-bold font-weight-bold">Share</h2>
 							<p class="text-center">Publish your maps to a select group OR to the whole world</p>
 						</div>
 					</div>
@@ -172,8 +172,28 @@
 			<section id="get-started">
 				<div class="container text-center">
 					<h2 class="text-center text-white">Get Started Now</h2>
-					<button class="btn btn-outline-light">Create a Map</button>
-					<button class="btn btn-outline-light">Explore Maps</button>
+					<div class="row">
+						<button class="btn btn-outline-light">Create a Map</button>
+						<button class="btn btn-outline-light">Explore Maps</button>
+					</div>
+					<div class="card-deck">
+					  <div class="card">
+					    <img class="card-img-top" src="assets/sample-projects/oakland-port.jpg" alt="Card image cap">
+					    <div class="card-body">
+					      <h5 class="card-title">Oakland Air Quality</h5>
+					      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+					      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+					    </div>
+					  </div>
+					  <div class="card">
+					    <img class="card-img-top" src="assets/sample-projects/la-pena-detail.jpg" alt="Card image cap">
+					    <div class="card-body">
+					      <h5 class="card-title">Berkeley Murals</h5>
+					      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+					      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+					    </div>
+					  </div>
+					</div>
 				</div>
 			</section>
 		</div>
