logo and assets

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 							<button type="button"  class="btn btn-outline-light">Get Started Now</button>
 						</div>
 						<div class="col-sm">
+							<img class="img-fluid" src="assets/garden-pin.png">
 						</div>
 					</div>
 				</div>
