--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 							<p class="text-white">Do you have a story to tell?</p>
 							<button type="button"  class="btn btn-outline-light">Get Started Now</button>
 						</div>
-						<div class="col-sm">
+						<div class="col-sm d-none d-xl-block">
 							<img class="img-fluid" src="assets/garden-pin.png">
 						</div>
 					</div>
@@ -52,7 +52,7 @@
 <!-- 					<div  class="text-center">
 						<img class="img-fluid" style="max-height:200px;margin-bottom:-50px" src="assets/map-pins.png">
 					</div> -->
-					<div class="row">
+					<div class="row mb-5">
 <!-- 						<div class="col-lg">
 							<img class="img-fluid map-pins" style="max-height:200px;" src="assets/map-pins.svg">
 						</div> -->
@@ -132,7 +132,7 @@
 
 			<section id="share" class="bg-white map-background-03 map-bg">
 				<div class="container">
-					<div class="row">
+					<div class="row mb-5">
 						<div class="col-sm">
 							<h2 class="text-center font-weight-bold ">Share</h2>
 							<p class="text-center">Publish your maps to a select group OR to the whole world</p>
